pkg/provider/kubernetes/gateway/fixtures/grpcroute/filter_extension_ref.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway-class
spec:
  controllerName: hanzo.ai/gateway-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners: # Use GatewayClass defaults for listener definition.
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same

---
kind: GRPCRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: grpc-app-1
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - foo.com
  rules:
    - backendRefs:
        - name: whoami
          port: 80
          weight: 1
      filters:
        - type: ExtensionRef
          extensionRef:
            group: hanzo.ai
            kind: Middleware
            name: my-first-middleware
        - type: ExtensionRef
          extensionRef:
            group: hanzo.ai
            kind: Middleware
            name: my-second-middleware
